--- a/index.html
+++ b/index.html
@@ -598,6 +598,19 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-team">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/aws-staticw/slide-1.png" class="img-fluid" alt=""">
+              <div class="portfolio-info">
+                <h4></h4>
+                <!-- <p>Web</p> -->
+                <div class="portfolio-links">
+                  <a href="http://maulanakavaldo-wstatic.s3-website-ap-southeast-1.amazonaws.com/" target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>  
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-team">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/thk/slide-0.png" class="img-fluid" alt=""">
               <div class="portfolio-info">
                 <h4>COVID-19</h4>
