--- a/pages/gallery-udemy.html
+++ b/pages/gallery-udemy.html
@@ -767,36 +767,9 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main --> 
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <h3>Maulana Kavaldo </h3><div class="social-links">
-        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
-        <a href="https://github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>        
-      </div>
-      
-      <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
-
-  <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
@@ -814,5 +787,4 @@
   <script src="../assets/js/main.js"></script>
 
 </body>
-
 </html>
