--- a/pages/java-movie-ticketing.html
+++ b/pages/java-movie-ticketing.html
@@ -117,6 +117,24 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
                 Projek ini dibuat untuk memenuhi tugas mata kuliah pemrograman
                 java.
               </p>
+              <p>
+                Proyek pengembangan perangkat lunak berbasis Java yang bertujuan untuk menyediakan sebuah platform yang memungkinkan pengguna untuk melakukan pemesanan tiket bioskop secara online. Aplikasi ini dirancang untuk meningkatkan kenyamanan dan kemudahan bagi pengguna dalam memilih, memesan, dan membayar tiket bioskop.
+              <p>
+                Fitur yang dimiliki oleh aplikasi ini antara lain:
+              </p>       
+
+                <ul>
+                  <li>
+                    Pemilihan Film: Pengguna dapat melihat daftar film yang sedang diputar di bioskop Jitet, termasuk informasi tentang judul film, sinopsis, genre, durasi, dan jadwal penayangan.
+                  </li>
+                  <li>
+                    Proses Pemesanan: Pengguna dapat memasukkan jumlah tiket yang ingin dipesan dan melanjutkan ke proses pemesanan. Mereka akan diminta untuk mengisi informasi pribadi seperti nama, nomor telepon, dan alamat email untuk konfirmasi.
+                  </li>
+                  <li>
+                    Riwayat Pemesanan: Pengguna dapat melihat riwayat pemesanan tiket mereka dalam aplikasi. Mereka dapat melihat informasi tentang film, jadwal penayangan, kursi yang dipesan, dan status pembayaran.
+                  </li>
+                </ul>
+              </p>
             </div>
           </div>
         </div>
@@ -125,13 +143,8 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
     </main>
     <!-- End #main -->
 
-    <div id="preloader"></div>
-    <a
-      href="#"
-      class="back-to-top d-flex align-items-center justify-content-center"
-      ><i class="bi bi-arrow-up-short"></i
-    ></a>
-
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+ 
     <!-- Vendor JS Files -->
     <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
     <script src="../assets/vendor/aos/aos.js"></script>
