--- a/pages/prakerja.html
+++ b/pages/prakerja.html
@@ -74,54 +74,41 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2> Rapid Miner Certifications </h2>
+          <h2> Kartu Prakerja </h2>
           <!-- <p></p> -->
         </div>
-
-        <!-- <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-python">Python</li>
-              <li data-filter=".filter-sql">SQL</li>
-              <li data-filter=".filter-css">CSS</li>
-            </ul>
-          </div>
-        </div> -->
-
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-                    
-          <div class="col-lg-3 col-md-6 portfolio-item filter">
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/rm-1.png" class="img-fluid" alt="">
+              <img src="../assets/img/certif_licen/prakerja/prakerja-rsk-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/rm-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/certif_licen/prakerja/prakerja-rsk-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/rm-2.png" class="img-fluid" alt="">
+              <img src="../assets/img/certif_licen/prakerja/prakerja-rsk-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/rm-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/certif_licen/prakerja/prakerja-rsk-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
           </div>
-                  
-          </div>
+
         </div>
       </div>
     </section><!-- End Portfolio Section -->
-  </main>
-  <!-- End #main --> 
+
+  </main><!-- End #main -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-  
+ 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="../assets/vendor/aos/aos.js"></script>
@@ -131,7 +118,7 @@
   <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="../assets/vendor/typed.js/typed.min.js"></script>
   <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
+  <!-- <script src="../assets/vendor/php-email-form/validate.js"></script> -->
 
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
