--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,8 @@
                 as Instructor (Kartu Prakerja x Rumah Siap Kerja)</h4>                    
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Maulana demonstrated exceptional dedication and skills in analyzing digital marketing data using Google Sheets during the Rumah Siap Kerja training. Truly outstanding!                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  Maulana demonstrated exceptional dedication and skills in analyzing digital marketing data using Google Sheets during the Rumah Siap Kerja training. Truly outstanding!                  
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
             </div>
@@ -1321,7 +1322,7 @@
                 as Instructor AWS re/Start Batch 5</h4>                    
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                           
+                  I was very impressed with Maulana's abilities. Maulana has good communication skills, it was proven that during the class he was very active, often asked questions and could explain his opinion well. Maulana has strong skills in Python and Cloud Concepts. He has also earned the AWS CCP Certification. He deserved it!       
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
