--- a/pages/prakerja.html
+++ b/pages/prakerja.html
@@ -79,23 +79,58 @@
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+          <!-- Analisis Data -->
           <div class="col-lg-3 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/prakerja/prakerja-rsk-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
+                <h4>Analisis Data</h4>
                 <div class="portfolio-links">
                   <a href="../assets/img/certif_licen/prakerja/prakerja-rsk-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
           </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/prakerja/prakerja-rsk-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
                   <a href="../assets/img/certif_licen/prakerja/prakerja-rsk-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Mikrotik -->
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/prakerja/prakerja-mikrotik-1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Mikrotik</h4>
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/prakerja/prakerja-mikrotik-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/prakerja/prakerja-mikrotik-2.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/prakerja/prakerja-mikrotik-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/prakerja/prakerja-mikrotik-3.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/prakerja/prakerja-mikrotik-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
