--- a/pages/gallery-certificates.html
+++ b/pages/gallery-certificates.html
@@ -126,6 +126,20 @@
             </div>
           </div>
 
+          
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/bd-1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <!-- <h4>WEB</h4> -->
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/bd-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-course">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/greatlearning/Maulana_Kavaldo20230301-64-1bxnb2x.jpg" class="img-fluid" alt="">
