--- a/pages/java-movie-ticketing.html
+++ b/pages/java-movie-ticketing.html
@@ -73,7 +73,14 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
               }
               ?> -->
 
-                <div class="swiper-slide">
+              <div class="swiper-slide">
+                <img
+                  src="../assets/img/portfolio/java-movie-ticketing/slide-0.png"
+                  alt=""
+                />
+              </div>
+
+              <div class="swiper-slide">
                   <img
                     src="../assets/img/portfolio/java-movie-ticketing/slide-1.png"
                     alt=""
