--- a/pages/project-thk.html
+++ b/pages/project-thk.html
@@ -78,7 +78,14 @@
 
               ?> -->
 
-                <div class="swiper-slide">
+              <div class="swiper-slide">
+                <img
+                  src="../assets/img/portfolio/thk/slide-0.png"
+                  alt="Tri Hita Karana Future Knowledge"
+                />
+              </div>
+
+              <div class="swiper-slide">
                   <img
                     src="../assets/img/portfolio/thk/Slide1.png"
                     alt="Tri Hita Karana Future Knowledge"
