--- a/pages/web-system-recommendation.html
+++ b/pages/web-system-recommendation.html
@@ -60,6 +60,13 @@
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
                   <img
+                    src="../assets/img/portfolio/web-system-recommendation/slide-0.png"
+                    alt=""
+                  />
+                </div>
+
+                <div class="swiper-slide">
+                  <img
                     src="../assets/img/portfolio/web-system-recommendation/slide-1.png"
                     alt=""
                   />
