--- a/index.html
+++ b/index.html
@@ -916,6 +916,18 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">          
           
+          <div id="adse" class="col-lg-3 col-md-6 portfolio-item filter-cloud" >
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/aws/aws-ofa.png" class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>AWS re/Start Program</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/certif_licen/aws/aws-ofa.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
           <div id="adse" class="col-lg-3 col-md-6 portfolio-item filter-ds" >
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/adse.png" class="img-fluid img-responsive thumb" alt="">
