--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <a href="https://medium.com/@maulanakavaldo/" class="medium"><i class="bx bxl-medium"></i></a>
         <a href="https://linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://instagram.com/maulana.kavaldo/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>      
-        <a href="https://drive.google.com/file/d/1lajGoTmIOjaN2fwp84Yra8DPFD6eKKlA/view?usp=share_link" target="_blank" class="bx bx-download" title="Show CV"></i></a>
+        <a href="https://drive.google.com/file/d/1pJkUSE3EoGnnELdG7bGUcFOcXOIMled1/view?usp=sharing" target="_blank" class="bx bx-download" title="Show CV"></i></a>
         <!-- <a href="https://twitter.com/mlnkvld/" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="https://instagram.com/maulana.kavaldo" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
