--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,18 @@
             </div>
           </div>
 
+          <div id="prakerja" class="col-lg-3 col-md-6 portfolio-item filter-cloud filter-linux" >
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/rhel/rhel.png" class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>Red Hat</h4>
+                <div class="portfolio-links">
+                  <a href="pages/gallery-rhel.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div id="prakerja" class="col-lg-3 col-md-6 portfolio-item filter-cloud filter-ds" >
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/prakerja.png" class="img-fluid img-responsive thumb" alt="">
