--- a/pages/gallery-thk.html
+++ b/pages/gallery-thk.html
@@ -74,7 +74,7 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>Tri Hita Kirana Future Knowledge: Data Science - Bali</h2>
+            <h2>Tri Hita Karana Future Knowledge: Data Science - Bali</h2>
             <!-- <p></p> -->
           </div>
   
