--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
           
-          <div class="col-lg-4 col-md-6 portfolio-item filter-team">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cloud">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/aws-staticw/slide-1.png" class="img-fluid" alt=""">
               <div class="portfolio-info">
