--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">      
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Maulana Kavaldo</h1>
-      <p>I'm <span class="typed" data-typed-items="Fresh Graduate, Jr. Data Scientist, Machine Learning, Cloud Computing, Data Enginee"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Fresh Graduate, Jr. Data Scientist, Machine Learning Developer, Cloud Computing Entusiast, Data Engineer"></span></p>
       <!-- <p>Universitas Teknologi Yogyakarta</p> -->
       <div class="social-links">
         <a href="https://github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
