--- a/index.html
+++ b/index.html
@@ -355,10 +355,19 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Maulana Kavaldo</h4>
-              <p><em>Fresh graduate and junior data scientist with more than 2 years of 
+              <p><em>
+                I’m have an interest in data science/ analyst, machine learning, and cloud computing. Have knowledge 
+                of information technology, especially in the use of office software such as Microsoft Office, familiar with 
+                several programming languages, data-related tools and network configuration. I’m quick learner, 
+                meticulous, strong in detail and always trying to give the best in every job, communicate well and work 
+                together in a team. Top 10% of the best participants DTS KOMINFO FGA: Data Science (2022). 
+
+                <!-- Fresh graduate and junior data scientist with more than 2 years of 
                 learning experience. Able to analyze datasets, use machine learning models  
                 and perform time management. Have analytical skills, strong in detail and 
-                able to work in a team. Top 10% of the best participants of DTS Kominfo FGA: Data Science Class Batch 4 (2022).</em></p>
+                able to work in a team. Top 10% of the best participants of DTS Kominfo FGA: Data Science Class Batch 4 (2022). -->
+              
+              </em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -374,7 +383,19 @@
             </div>
 
             <div class="resume-item">
-              <h4>Gren Digital Skills</h4>
+              <h4>Bootcamp Techno Center</h4>
+              <h5>September - Present</h5><br>
+              <em>Berijalan - Member of ASTRA</em>
+              <!-- <p> -->
+                <br>
+                <!-- Achievement: -->
+                <!-- <div style="margin-left: 1em;"> -->
+                <!-- <li>Overall score: /100</li> -->
+                <!-- </p> -->
+            </div>
+
+            <div class="resume-item">
+              <h4>Green Digital Skills</h4>
               <h5>May - June 2023</h5><br>
               <em>INCO Academy</em>
               <!-- <p> -->
@@ -523,6 +544,17 @@
             <h3 class="resume-title">Experience</h3>
 
             <div class="resume-item">
+              <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <h4>Project-Based Intern: Data Scientist<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
+              <h5>Sept 2023 - Present</h5>
+              <p><em>Virtual Internship Experience | Kalbe Nutritionals</em></p>
+              Finishing various task related with the activity of Data Scientist from Home Credit Indonesia.
+              Learn about the use of SQL and Python programming languages in data processing, exploring 
+              data, and trying to perform predictive models such as clustering, regression, and classification 
+              data. 
+            </div>
+            
+            <div class="resume-item">
               <a href="assets/img/certif_licen/vix-hci.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
               <h4>Project-Based Intern: Data Scientist<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <h5>Mart 2023</h5>
@@ -538,7 +570,7 @@
             <div class="resume-item">
               <a href="assets/img/certif_licen/vix-muamalat.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
               <h4>Project-Based Intern: BI Analyst<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
-              <h5>February 2023 (1 Month)</h5>
+              <h5>February 2023</h5>
               <p><em>Virtual Internship Experience | Bank Muamalat</em></p>
               Finishing various task related with the activity of Business Intelligence Analyst from Bank Muamalat.
               <ul>
@@ -558,7 +590,7 @@
               <a href="assets/img/certif_licen/vix-btpn.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
               <h4>Project-Based Intern: Data Engineer<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <!-- <h4>Data Engineer</h4> -->
-              <h5>October 2022 (1 Month)</h5>
+              <h5>October 2022</h5>
               <p><em>Virtual Internship Experience | BTPN Syariah</em></p>
               Finishing various task related with the activity of Data Engineer from BTPN Syariah.          
               <ul>
@@ -570,7 +602,7 @@
               <!-- <h4>Big Data Analytics</h4> -->
               <a href="assets/img/certif_licen/vix-kimfar.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <h4>Project-Based Intern: Big Data Analytics<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
-              <h5>September 2022 (1 Month)</h5>
+              <h5>September 2022</h5>
               <p><em>Virtual Internship Experience | Kimia Farma</em></p> 
               Finishing various task related with the activity of Big Data Analytics from Kimia Farma.
               <ul>
