--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
         <a href="https://medium.com/@maulanakavaldo/" class="medium"><i class="bx bxl-medium"></i></a>
         <a href="https://linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://instagram.com/maulana.kavaldo/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>   
-        <a href="https://public.tableau.com/app/profile/maulana.kavaldo" target="_blank" class="tableau"><i class="bx bxl-tableau"></i></a>   
+        <a href="https://public.tableau.com/app/profile/maulana.kavaldo" target="_blank" class="tableau"><i class="bx bx-bar-chart-alt-2" title="Tableau Public Profile"></i></a>
+        <a href=" https://www.datascienceportfol.io/maulana_kavaldo" target="_blank" class="portfolio"><i class="bx bx-collection" title="Portfolio Data Science"></i></a>   
         <a href="https://drive.google.com/file/d/1D20TLp8hqc-jvrXNPfTOwy-GBv8_hx0-/view?usp=sharing" target="_blank" class="bx bx-download" title="Show CV"></i></a>
+       
         <!-- <a href="https://twitter.com/mlnkvld/" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="https://instagram.com/maulana.kavaldo" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
