--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ---------------------------------------------------------
-  * Edited: Maulana Kavaldo / 16 November 2022
+  * Edited: Maulana Kavaldo / 16 Sept 2023
+  * Icon: https://themesbrand.com/skote/layouts/icons-boxicons.html
   * Email : alkav.maulana@gmail.com
   =========================================================-->
 
