--- a/index.html
+++ b/index.html
@@ -554,8 +554,7 @@
               <p><em>Virtual Internship Experience | Kalbe Nutritionals</em></p>
               Finishing various task related with the activity of Data Scientist from Home Credit Indonesia.
               Learn about the use of SQL and Python programming languages in data processing, exploring 
-              data, and trying to perform predictive models such as clustering, regression, and classification 
-              data. 
+              data, and trying to perform predictive models such as regression for forecasting and clustering (customer segmentation). 
             </div>
             
             <div class="resume-item">
@@ -646,6 +645,28 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-bike-sharing/bike-sharing.png" class="img-fluid" alt=""">
+              <div class="portfolio-info">
+                <h4>Bike Sharing</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-bike-sharing.html" target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>  
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-rock-paper-scrissor/rock_paper_scrissor.png" class="img-fluid" alt=""">
+              <div class="portfolio-info">
+                <h4></h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-rock-paper-scrissor.html" target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>  
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-ds">
             <div class="portfolio-wrap">
