--- a/index.html
+++ b/index.html
@@ -1085,6 +1085,18 @@
 
           <div id="prakerja" class="col-lg-3 col-md-6 portfolio-item filter-cloud filter-linux" >
             <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/dicoding/dicoding.png" class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>Dicoding</h4>
+                <div class="portfolio-links">
+                  <a href="pages/gallery-dicoding.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="prakerja" class="col-lg-3 col-md-6 portfolio-item filter-cloud filter-linux" >
+            <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/rhel/rhel.png" class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
                 <h4>Red Hat</h4>
