--- a/index.html
+++ b/index.html
@@ -1193,6 +1193,17 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-ds">
             <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/vix-kalbe.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="assets/img/certif_licen/vix-kalbe.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ds">
+            <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/vix-muamalat.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
@@ -1243,42 +1254,6 @@
                 <h4>AWS</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/certif_licen/skill-builder-aws.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="#aws" class="col-lg-3 col-md-6 portfolio-item filter-cloud">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/dicoding-aws.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>AWS</h4>
-                <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/dicoding-aws.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="" class="col-lg-3 col-md-6 portfolio-item filter-py">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/dicoding-1.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Python</h4>
-                <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/dicoding-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="" class="col-lg-3 col-md-6 portfolio-item filter-ds">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/dicoding-2.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Data Visualization</h4>
-                <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/dicoding-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
