--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
               <div class="portfolio-info">
                 <h4>Bike Sharing</h4>
                 <div class="portfolio-links">
-                  <a href="pages/project-bike-sharing.html" target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-bike-sharing.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -662,7 +662,7 @@
               <div class="portfolio-info">
                 <h4></h4>
                 <div class="portfolio-links">
-                  <a href="pages/project-rock-paper-scrissor.html" target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-rock-paper-scrissor.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
