--- a/index.html
+++ b/index.html
@@ -645,6 +645,19 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt=""">
+              <div class="portfolio-info">
+                <h4>VIX - Kalbe Nutritionals</h4>
+                <div class="portfolio-links">
+                  <a href="https://gamma.app/public/ARIMA-TIME-SERIES-SALES-FORECASTING-AND-CUSTOMER-SEGMENTATION-USI-edem22y3tq5znyy" target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>  
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-bike-sharing/bike-sharing.png" class="img-fluid" alt=""">
