--- a/index.html
+++ b/index.html
@@ -1258,6 +1258,30 @@
             </div>
           </div>
 
+          <div id="credly" class="col-lg-3 col-md-6 portfolio-item filter-cloud">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/credly.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="https://www.credly.com/users/maulana-kavaldo/badges" target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="gcp" class="col-lg-3 col-md-6 portfolio-item filter-cloud">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/gcp.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <!-- <h4>Google Cloud Platform</h4> -->
+                <div class="portfolio-links">
+                  <a href="https://www.cloudskillsboost.google/public_profiles/aa062bc9-81cc-4a11-9f53-025437d13c1f"
+                    target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div id="coursera" class="col-lg-3 col-md-6 portfolio-item filter">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/coursera/coursera.png" class="img-fluid img-responsive thumb" alt="">
