--- a/index.html
+++ b/index.html
@@ -1138,16 +1138,28 @@
         </div> -->
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-          
-          <div class="col-lg-3 col-md-6 portfolio-item filter-gpm">
+
+          <div id="coursera" class="col-lg-3 col-md-6 portfolio-item filter">
             <div class="portfolio-wrap">
-              <img
-                src="assets/img/certif_licen/coursera/gpm/google_project_management.png"
-                class="img-fluid" alt="">
+              <img src="assets/img/certif_licen/coursera/ibm/IBM Project Manager.png" class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
+                <h4>IBM Project Manager</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/coursera/gpm/google_project_management.png"
-                    data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="pages/gallery-coursera-ibm.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="coursera" class="col-lg-3 col-md-6 portfolio-item filter">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/coursera/gpm/google_project_management.png" class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>Google Project Management</h4>
+                <div class="portfolio-links">
+                  <a href="pages/gallery-coursera-gpm.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1269,28 +1281,13 @@
             </div>
           </div>
 
-          <div id="gcp" class="col-lg-3 col-md-6 portfolio-item filter-cloud">
+          <div id="gcp" class="col-lg-3 col-md-6 portfolio-item filter-pm">
             <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/gcp.png" class="img-fluid" alt="">
+              <img src="assets/img/certif_licen/coursera/coursera.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <!-- <h4>Google Cloud Platform</h4> -->
                 <div class="portfolio-links">
                   <a href="https://www.cloudskillsboost.google/public_profiles/aa062bc9-81cc-4a11-9f53-025437d13c1f"
                     target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="coursera" class="col-lg-3 col-md-6 portfolio-item filter">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/coursera.png" class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>Coursera</h4>
-                <!-- <p>Web</p> -->
-                <div class="portfolio-links">
-                  <a href="pages/gallery-coursera.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
