--- a/index.html
+++ b/index.html
@@ -1695,7 +1695,7 @@
               <div class="phone">
                 <i class="bx bxl-whatsapp"></i>
                 <h4>Scan me:</h4>
-                <p><img src="assets/img/barcode.png" height="120px" width="120px" alt="barcode whatsapp"></p>
+                <p><a href="wa.me/6281393363478"><img src="assets/img/barcode.png" height="120px" width="120px" alt="barcode whatsapp"></a></p>
               </div>
 
               <!-- LINKEDIN -->
