--- a/index.html
+++ b/index.html
@@ -1694,8 +1694,8 @@
 
               <div class="phone">
                 <i class="bx bxl-whatsapp"></i>
-                <h4>Scan me:</h4>
-                <p><a href="wa.me/6281393363478"><img src="assets/img/barcode.png" height="120px" width="120px" alt="barcode whatsapp"></a></p>
+                <h4>Scan or Click me:</h4>
+                <p><a href="https://wa.me/6281393363478" target="_blank"><img src="assets/img/barcode.png" height="120px" width="120px" alt="barcode whatsapp"></a></p>
               </div>
 
               <!-- LINKEDIN -->
