--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Data Studio
+              <span class="skill">Looker Studio
                 <!-- <i class="val">75%</i> -->
               </span>
               <div class="progress-bar-wrap">
@@ -1139,6 +1139,19 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+          <div id="coursera" class="col-lg-3 col-md-6 portfolio-item filter">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/coursera/gda/Google Data Analytics.png" class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>Google Data Analytics</h4>
+                <div class="portfolio-links">
+                  <a href="pages/gallery-coursera-gda.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
           <div id="coursera" class="col-lg-3 col-md-6 portfolio-item filter">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/coursera/ibm/IBM Project Manager.png" class="img-fluid img-responsive thumb" alt="">
