--- a/pages/gallery-coursera-gda.html
+++ b/pages/gallery-coursera-gda.html
@@ -91,11 +91,11 @@
 
         <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/" class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gda/Google Data Analytics.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p></p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/" data-gallery="portfolioGallery"
+                <a href="../assets/img/certif_licen/coursera/gda/Google Data Analytics.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
@@ -187,19 +187,6 @@
               <p></p>
               <div class="portfolio-links">
                 <a href="../assets/img/certif_licen/coursera/gda/7 Data Analysis with R Programming.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
-          <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <p></p>
-              <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
