--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@
               <img src="assets/img/certif_licen/coursera/coursera.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="https://www.cloudskillsboost.google/public_profiles/aa062bc9-81cc-4a11-9f53-025437d13c1f"
+                  <a href="https://www.coursera.org/user/ab32a041a00090f591b49fcb292cdad7"
                     target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
