--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -43,7 +43,7 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-        <div class="col-lg-11">
+        <div class="">
           <div class="portfolio-details-slider swiper">
             <div class="swiper-wrapper align-items-center">
               <!-- <?php
@@ -66,7 +66,7 @@
           </div>
         </div>
 
-        <div class="col-lg-11">
+        <div class="">
           <div class="portfolio-info">
             <h3>Project Information</h3>
             <ul>
@@ -76,7 +76,7 @@
               <li><strong>Project date</strong> : September 2023</li>
               <li>
                 <strong>Project URL</strong> :
-                <a href="https://github.com/maulanakavaldo/dicoding_project">Github</a>
+                <a href="https://github.com/maulanakavaldo/dicoding_project" target="_blank">Github</a>
               </li>
             </ul>
             <br />
@@ -95,9 +95,12 @@
               sharing system into a virtual sensor network that can be used for sensing mobility in the city. Hence, it is expected that
               most of important events in the city could be detected via monitoring these data.
             </p>
+          
+            <iframe src="https://maulanakavaldo.github.io/dicoding_project/Belajar%20Analisis%20Data%20dengan%20Python/bike_sharing.html" frameborder="0" style="width: 100%; height: 1000px;"></iframe>
+
           </div>
+
         </div>
-        <iframe src="" frameborder="0"></iframe>
       </div>
     </section>
     <!-- End Portfolio Details Section -->
