--- a/index.html
+++ b/index.html
@@ -783,16 +783,61 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ml filter-data">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/datacamp/A Visual History of Nobel Prize Winners.png"
+              <img src="assets/img/portfolio/datacamp/Exploring 67 years of LEGO.png" class="img-fluid"
+                alt="">
+              <div class=" portfolio-info">
+                <h4>Exploring 67 years of LEGO</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/DataCamp/Exploring 67 years of LEGO/Exploring 67 years of LEGO.html"
+                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/datacamp/The Android App Market on Google Play.png" class="img-fluid"
+                alt="">
+              <div class=" portfolio-info">
+                <h4>The Android App Market on Google Play</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/DataCamp/The Android App Market on Google Play/The Android App Market on Google Play.html"
+                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/datacamp/Investigating Netflix Movies and Guest Stars in The Office.png"
                 class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Investigating Netflix Movies and Guest Stars in The Office</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/DataCamp/Investigating Netflix Movies and Guest Stars in The Office/Investigating Netflix Movies and Guest Stars in The Office.html"
+                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/datacamp/A Visual History of Nobel Prize Winners.png" class="img-fluid"
+                alt="">
               <div class=" portfolio-info">
                 <h4>A Visual History of Nobel Prize Winners</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/DataCamp/A Visual History of Nobel Prize Winners/A Visual History of Nobel Prize Winners.html" target="_blank"
-                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
-                      class="bx bx-link"></i></a>
+                  <a href="https://maulanakavaldo.github.io/DataCamp/A Visual History of Nobel Prize Winners/A Visual History of Nobel Prize Winners.html"
+                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
