--- a/pages/project-rock-paper-scrissor.html
+++ b/pages/project-rock-paper-scrissor.html
@@ -43,7 +43,7 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-        <div class="col-lg-11">
+        <div class="">
           <div class="portfolio-details-slider swiper">
             <div class="swiper-wrapper align-items-center">
               <!-- <?php
@@ -66,7 +66,7 @@
           </div>
         </div>
 
-        <div class="col-lg-11">
+        <div class="">
           <div class="portfolio-info">
             <h3>Project Information</h3>
             <ul>
@@ -108,6 +108,7 @@
               can be further improved. Finally, the trained model will be implemented in an application or user
               interface that allows users to test the model with their own rock, paper, and scissors images.
             </p>
+            <iframe src="https://maulanakavaldo.github.io/dicoding_project/Belajar%20Analisis%20Data%20dengan%20Python/bike_sharing.html" frameborder="0" style="width: 100%; height: 1000px;"></iframe>
           </div>
         </div>
       </div>
