--- a/pages/project-rock-paper-scrissor.html
+++ b/pages/project-rock-paper-scrissor.html
@@ -108,7 +108,7 @@
               can be further improved. Finally, the trained model will be implemented in an application or user
               interface that allows users to test the model with their own rock, paper, and scissors images.
             </p>
-            <iframe src="https://github.com/maulanakavaldo/dicoding_project/blob/main/Belajar%20Machine%20Learning%20Untuk%20Pemula/MaulanaKavaldo_Submission_RockPaperScissors.html" frameborder="0" style="width: 100%; height: 1000px;"></iframe>
+            <iframe src="https://maulanakavaldo.github.io/dicoding_project/blob/main/Belajar%20Machine%20Learning%20Untuk%20Pemula/MaulanaKavaldo_Submission_RockPaperScissors.html" frameborder="0" style="width: 100%; height: 1000px;"></iframe>
           </div>
         </div>
       </div>
