--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-vix filter-data">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-vix filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -751,6 +751,21 @@
                 <div class="portfolio-links">
                   <a href="https://gamma.app/public/ARIMA-TIME-SERIES-SALES-FORECASTING-AND-CUSTOMER-SEGMENTATION-USI-edem22y3tq5znyy"
                     target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div> -->
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid"
+                alt="">
+              <div class=" portfolio-info">
+                <h4>VIX - Kalbe Nutritionals</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/Virtual-Internship/Kalbe%20Nutritionals%20-%20Data%20Scientist/vix_kalbe.html"
+                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -763,9 +778,14 @@
               <div class=" portfolio-info">
                 <h4>VIX - Home Credit Indonesia</h4>
                 <div class="portfolio-links">
-                  <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Home%20Credit%20Indonesia"
-                    target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
+                  <!-- <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Home%20Credit%20Indonesia"
+                    target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
+                  
+                    <a href="pages/project-vix-hci.html"
+                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
+
+                  </div>
               </div>
             </div>
           </div>
