--- a/index.html
+++ b/index.html
@@ -758,8 +758,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid"
-                alt="">
+              <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
                 <h4>VIX - Kalbe Nutritionals</h4>
                 <div class="portfolio-links">
@@ -780,12 +779,11 @@
                 <div class="portfolio-links">
                   <!-- <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Home%20Credit%20Indonesia"
                     target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
-                  
-                    <a href="pages/project-vix-hci.html"
-                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Show Details"><i class="bx bx-link"></i></a>
 
-                  </div>
+                  <a href="pages/project-vix-hci.html" target="_blank" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+
+                </div>
               </div>
             </div>
           </div>
@@ -805,8 +803,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/datacamp/Exploring 67 years of LEGO.png" class="img-fluid"
-                alt="">
+              <img src="assets/img/portfolio/datacamp/Exploring 67 years of LEGO.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
                 <h4>Exploring 67 years of LEGO</h4>
                 <div class="portfolio-links">
